mudei o arquivo index

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores natus quidem optio, perferendis quod veniam, officia, dicta voluptas fugit eos voluptatum perspiciatis autem voluptatibus qui ipsam hic est assumenda blanditiis?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis assumenda dolorem quod a eaque. Rerum beatae iusto, suscipit necessitatibus laborum nesciunt maxime blanditiis veritatis accusamus quis, magnam recusandae magni eveniet?</p>
+    <p>esse paragrafo foi adicionado dentro do github desktop para linux</p>
     
 </body>
 </html>
